Añadida otra página a la sección de viajes, se elimina una de la sección markdown

--- a/public/sobremi/crochet/index.html
+++ b/public/sobremi/crochet/index.html
@@ -79,7 +79,7 @@
             
                 <li>
                     <a 
-                        href='https://github.com/tuusuario'
+                        href='https://github.com/SaruCodes'
                         target="_blank"
                         title="GitHub"
                         rel="me"
@@ -334,6 +334,16 @@ En este artículo, hablare sobre los puntos básicos, los tipos de ganchos y el 
 <li><strong>Acrílico</strong>: Económico y disponible en una amplia variedad de colores.</li>
 <li><strong>Lana</strong>: Cálida y elástica, ideal para prendas de invierno.</li>
 </ul>
+<p><img src="/img/crochet2.jpg"
+	
+	
+	
+	loading="lazy"
+	
+		alt="Imagen de ovillos azules"
+	
+	
+></p>
 <hr>
 <h2 id="aprende-los-puntos-básicos">Aprende los puntos básicos
 </h2><p>Antes de lanzarte a proyectos complejos, es importante dominar los puntos básicos. Aquí tienes algunos esenciales:</p>
@@ -357,6 +367,15 @@ En este artículo, hablare sobre los puntos básicos, los tipos de ganchos y el 
 <h2 id="un-mundo-de-posibilidades">Un mundo de posibilidades
 </h2><p>El crochet no solo es divertido, sino también terapéutico. Con el tiempo, podrás crear prendas de vestir, mantas decorativas, juguetes y más. Además, es una manera fantástica de personalizar regalos o incluso de iniciar un pequeño negocio.</p>
 <p>¡Así que toma tu aguja, elige un ovillo de tu color favorito y comienza a crear! El mundo del crochet te espera con infinitas posibilidades. 🌟</p>
+<div class="video-wrapper">
+    <iframe loading="lazy" 
+            src="https://www.youtube.com/embed/zzWX2dx8ufc" 
+            allowfullscreen 
+            title="YouTube Video"
+    >
+    </iframe>
+</div>
+
 <hr>
 
 </section>
