--- a/public/sobremi/videojuegos/index.html
+++ b/public/sobremi/videojuegos/index.html
@@ -79,7 +79,7 @@
             
                 <li>
                     <a 
-                        href='https://github.com/tuusuario'
+                        href='https://github.com/SaruCodes'
                         target="_blank"
                         title="GitHub"
                         rel="me"
