--- a/public/viajes/portugal/index.html
+++ b/public/viajes/portugal/index.html
@@ -79,7 +79,7 @@
             
                 <li>
                     <a 
-                        href='https://github.com/tuusuario'
+                        href='https://github.com/SaruCodes'
                         target="_blank"
                         title="GitHub"
                         rel="me"
@@ -286,7 +286,7 @@
 
 
                 <time class="article-time--reading">
-                    Tiempo de lectura 3 minutos
+                    Tiempo de lectura 4 minutos
                 </time>
             </div>
         
@@ -311,9 +311,30 @@ Con sus calles empedradas, sus miradores panorámicos y su famosa luz dorada, es
 </h2><p>Lisboa es una ciudad cargada de historia, desde los días de los descubrimientos marítimos hasta su resiliencia tras el devastador terremoto de 1755.
 Cada esquina cuenta una historia, y cada monumento te invita a viajar en el tiempo. No podrás parar de mirar la bella arquitectura, sus tranvías amarillos
 antiguos y los numerosos monumentos.</p>
-<h3 id="el-barrio-de-alfama"><strong>El Barrio de Alfama</strong>
+<h2 id="lugares-emblemáticos-de-la-ciudad"><strong>Lugares emblemáticos de la ciudad</strong>
+</h2><h3 id="el-barrio-de-alfama"><strong>El Barrio de Alfama</strong>
 </h3><p>Alfama, el barrio más antiguo de Lisboa, es un laberinto de calles estrechas y casas de colores pastel adornadas con azulejos tradicionales. Es el lugar perfecto para perderse sin mapa, descubriendo miradores escondidos y pequeñas plazas llenas de vida.</p>
 <p>No te pierdas el <strong>Castillo de San Jorge</strong>, un imponente testimonio de la historia medieval de la ciudad, desde donde podrás disfrutar de una de las vistas más espectaculares de Lisboa.</p>
+<h2 id="3-castillo-de-san-jorge-"><strong>3. Castillo de San Jorge</strong> 🏯
+</h2><p>Situado en una colina con vistas panorámicas de la ciudad, este castillo medieval fue una fortaleza clave durante la historia de Lisboa. Es perfecto para explorar murallas y disfrutar de vistas impresionantes.</p>
+<ul>
+<li><strong>Ubicación:</strong> Alfama</li>
+<li><strong>Dato curioso:</strong> Fue residencia real durante el reinado de los moros.</li>
+</ul>
+<hr>
+<h2 id="4-elevador-de-santa-justa-"><strong>4. Elevador de Santa Justa</strong> 🛗
+</h2><p>Una maravilla de ingeniería del siglo XIX, este ascensor conecta los barrios de Baixa y Chiado. Su diseño neogótico lo convierte en una atracción única.</p>
+<ul>
+<li><strong>Ubicación:</strong> Baixa</li>
+<li><strong>Dato curioso:</strong> Diseñado por Raoul Mesnier de Ponsard, discípulo de Gustave Eiffel.</li>
+</ul>
+<hr>
+<h2 id="5-plaza-del-comercio-praça-do-comércio-"><strong>5. Plaza del Comercio (Praça do Comércio)</strong> 🌟
+</h2><p>Una de las plazas más grandes y hermosas de Europa, ubicada junto al río Tajo. Representa la reconstrucción de la ciudad tras el terremoto de 1755.</p>
+<ul>
+<li><strong>Ubicación:</strong> Baixa</li>
+<li><strong>Dato curioso:</strong> Aquí se encuentra el icónico Arco de Rua Augusta.</li>
+</ul>
 <hr>
 <h2 id="sabores-de-lisboa"><strong>Sabores de Lisboa</strong>
 </h2><p>No puedes hablar de Lisboa sin mencionar su deliciosa gastronomía. Aquí, cada comida es una experiencia que mezcla tradición y frescura.</p>
