Intento de añadir carrousel de imagenes

--- a/public/sobremi/crochet/index.html
+++ b/public/sobremi/crochet/index.html
@@ -366,7 +366,7 @@ En este artículo, hablare sobre los puntos básicos, los tipos de ganchos y el 
 <hr>
 <h2 id="un-mundo-de-posibilidades">Un mundo de posibilidades
 </h2><p>El crochet no solo es divertido, sino también terapéutico. Con el tiempo, podrás crear prendas de vestir, mantas decorativas, juguetes y más. Además, es una manera fantástica de personalizar regalos o incluso de iniciar un pequeño negocio.</p>
-<p>¡Así que toma tu aguja, elige un ovillo de tu color favorito y comienza a crear! El mundo del crochet te espera con infinitas posibilidades. 🌟</p>
+<p>¡Así que toma tu aguja, elige un ovillo de tu color favorito y comienza a crear! Añado un tutorial para que podais poneros manos a la obra. 🌟</p>
 <div class="video-wrapper">
     <iframe loading="lazy" 
             src="https://www.youtube.com/embed/zzWX2dx8ufc" 
