Ultimos cambios y añadidas imágenes nuevas

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -16,6 +16,7 @@
 <meta name="twitter:description" content="Welcome to my space."><link rel="alternate" type="application/rss&#43;xml" href="http://localhost:1313/en/index.xml">
     <link rel="shortcut icon" href="/favicon.ico" />
 
+        <link rel="stylesheet" href="/css/tv-styles.css">
     </head>
     <body class="">
     <script>
