--- a/public/sobremi/videojuegos/index.html
+++ b/public/sobremi/videojuegos/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:image" content='http://localhost:1313/img/videojuego.jpg' />
     <link rel="shortcut icon" href="/favicon.ico" />
 
+        <link rel="stylesheet" href="/css/tv-styles.css">
     </head>
     <body class="
     article-page
