--- a/public/viajes/portugal/index.html
+++ b/public/viajes/portugal/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:image" content='http://localhost:1313/img/lisboa.jpg' />
     <link rel="shortcut icon" href="/favicon.ico" />
 
+        <link rel="stylesheet" href="/css/tv-styles.css">
     </head>
     <body class="
     article-page
@@ -361,11 +362,41 @@ antiguos y los numerosos monumentos.</p>
 <h2 id="sabores-de-lisboa"><strong>Sabores de Lisboa</strong>
 </h2><p>No puedes hablar de Lisboa sin mencionar su deliciosa gastronomía. Aquí, cada comida es una experiencia que mezcla tradición y frescura.</p>
 <h3 id="pasteles-de-nata"><strong>Pasteles de Nata</strong>
-</h3><p>Es imposible visitar Lisboa y no probar un <strong>pastel de nata</strong>. Estas tartaletas de crema, especialmente las de la famosa pastelería <strong>Pastéis de Belém</strong>, son el acompañamiento perfecto para un café portugués.</p>
+</h3><p>Es imposible visitar Lisboa y no probar un <strong>pastel de nata</strong>. Estas tartaletas de crema, especialmente las de la famosa pastelería <strong>Pastéis de Belém</strong>, son el acompañamiento perfecto para un café portugués.
+<img src="/img/pastelnata.jpg"
+	
+	
+	
+	loading="lazy"
+	
+		alt="Imagen de una cesta con pasteles de nata"
+	
+	
+></p>
 <h3 id="bacalhau-à-brás"><strong>Bacalhau à Brás</strong>
-</h3><p>El bacalao es el ingrediente estrella de la cocina portuguesa, y el <strong>Bacalhau à Brás</strong>, una mezcla de bacalao desmenuzado con cebolla, patatas fritas y huevo, es uno de los platos más queridos por los locales.</p>
+</h3><p>El bacalao es el ingrediente estrella de la cocina portuguesa, y el <strong>Bacalhau à Brás</strong>, una mezcla de bacalao desmenuzado con cebolla, patatas fritas y huevo, es uno de los platos más queridos por los locales.
+<img src="/img/bacalhau.jpg"
+	
+	
+	
+	loading="lazy"
+	
+		alt="Imagen de un plato de bacalhau a bras"
+	
+	
+></p>
 <h3 id="francesinhas"><strong>Francesinhas</strong>
-</h3><p>Un sandwich con carne, jamón de york, queso y huevo con salsa de tomate, uno de los platos de la cocina de aprovechamiento más famosos de todo Portugal.</p>
+</h3><p>Un sandwich con carne, jamón de york, queso y huevo con salsa de tomate, uno de los platos de la cocina de aprovechamiento más famosos de todo Portugal.
+<img src="/img/francesinha.jpg"
+	
+	
+	
+	loading="lazy"
+	
+		alt="Imagen de una frnacesinha cortada a la mitad"
+	
+	
+></p>
 <hr>
 <h2 id="consejos-para-tu-viaje"><strong>Consejos para tu Viaje</strong>
 </h2><ul>
