--- a/public/en/404.html
+++ b/public/en/404.html
@@ -15,6 +15,7 @@
 <meta name="twitter:description" content="Welcome to my space.">
     <link rel="shortcut icon" href="/favicon.ico" />
 
+        <link rel="stylesheet" href="/css/tv-styles.css">
     </head>
     <body class="">
     <script>
